src/main/java/com/example/finalproject/_core/error/exception/SSRException400.java
package com.example.finalproject._core.error.exception;

public class SSRException400 extends RuntimeException{

    public SSRException400(String msg) {
        super(msg);
    }
}
